Update to JDK 20